--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="p5.play.js"></script>
 
    
-   
-    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
 
+<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-auth.js"></script>
+<script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
+    
 
 <script>
   // Your web app's Firebase configuration
