--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-   
-   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-auth.js"></script>
-<script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
-    
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
+    <script>
+      var firebaseConfig = {
     apiKey: "AIzaSyAxqHLkenC8VxdDeUTojWiTjQz4rkl8kzU",
     authDomain: "ball-f2fba.firebaseapp.com",
     databaseURL: "https://ball-f2fba.firebaseio.com",
@@ -26,12 +22,8 @@
     messagingSenderId: "443896165278",
     appId: "1:443896165278:web:850835929bdfb886b81c8f"
   };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
-
-
-    
+      firebase.initializeApp(firebaseConfig);
+    </script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
